--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@headlessui/react": "^2.1.3",
     "axios": "^1.7.5",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
